// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing ProjectFields component Should match snapshot 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="min-h-20"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
          for=""
        >
          Name
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <input
              class="block py-1 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer "
              data-testid="nameProject"
              id=""
              name="name"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20"
    >
      <label
        class="text-gray-500 text-sm dark:text-gray-400"
        for="tags"
      >
        Participants
      </label>
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          multiple=""
          title="multi-select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select...
          </option>
          <option
            class="hidden"
            value="0"
          >
            Jessica
          </option>
          <option
            class="hidden"
            value="9"
          >
            Kali
          </option>
          <option
            class="hidden"
            value="5"
          >
            Henry 
          </option>
          <option
            class="hidden"
            value="6"
          >
            John
          </option>
          <option
            class="hidden"
            value="4"
          >
            June
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-1.5 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content dark:text-dark-tremor-content border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r0:"
            type="button"
          >
            <div
              class="h-6 flex items-center"
            >
              <span>
                Select...
              </span>
            </div>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-2.5"
            >
              <svg
                class="tremor-MultiSelect-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="min-h-20"
    >
      <label
        class="text-gray-500 text-sm dark:text-gray-400"
        for="tags"
      >
        Tool Icon
      </label>
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          multiple=""
          title="multi-select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select...
          </option>
          <option
            class="hidden"
            value="0"
          >
            SlackBot
          </option>
          <option
            class="hidden"
            value="1"
          >
            Spotify
          </option>
          <option
            class="hidden"
            value="2"
          >
            Yahoo
          </option>
          <option
            class="hidden"
            value="3"
          >
            Zalo
          </option>
          <option
            class="hidden"
            value="4"
          >
            Twitter
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-1.5 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content dark:text-dark-tremor-content border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r1:"
            type="button"
          >
            <div
              class="h-6 flex items-center"
            >
              <span>
                Select...
              </span>
            </div>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-2.5"
            >
              <svg
                class="tremor-MultiSelect-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 gap-3"
    >
      <label
        class="text-gray-500 text-sm dark:text-gray-400 after:content-['*'] after:text-red-500 after:text-md"
        for="tags"
      >
        Due date
      </label>
      <div
        class="relative w-full min-w-[10rem] text-tremor-default focus:ring-2 focus:ring-tremor-brand-muted dark:focus:ring-dark-tremor-brand-muted [&>button]:!pl-2 py-4"
        data-headlessui-state=""
      >
        <button
          aria-expanded="false"
          class="w-full outline-none text-left whitespace-nowrap truncate focus:ring-2 transition duration-100 rounded-tremor-default flex flex-nowrap border pl-3 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pr-8 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
          data-headlessui-state=""
          id="headlessui-popover-button-:r2:"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="tremor-DatePicker-calendarIcon flex-none shrink-0 h-5 w-5 mr-2 -ml-0.5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
              fill-rule="evenodd"
            />
          </svg>
          <p
            class="truncate"
          >
            Apr 23, 2024
          </p>
        </button>
        <button
          class="absolute outline-none inset-y-0 right-0 flex items-center transition duration-100 mr-4"
          type="button"
        >
          <svg
            class="flex-none h-4 w-4 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
            />
          </svg>
        </button>
      </div>
      <div
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
    <div
      class="min-h-20 mb-2"
    >
      <p
        class="text-tremor-default text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
      >
        Description
      </p>
      <div
        class="flex justify-center items-center h-44 w-full"
      >
        <p
          class="text-tremor-default font-semibold text-secondary dark:text-white"
        >
          Loading Quill Editor ...
        </p>
      </div>
      <p
        class="text-tremor-default pt-1 text-xs text-red-500 dark:text-red-500"
      />
    </div>
  </div>
</div>
`;

exports[`Testing ProjectFields component Should show error messages for invalid name 1`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="min-h-20"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
          for=""
        >
          Name
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <input
              class="block py-1 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer "
              data-testid="nameProject"
              id=""
              name="name"
              value=""
            />
            <p
              class="text-tremor-default pt-1 text-xs text-red-500 dark:text-red-500"
            >
              This field is required.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20"
    >
      <label
        class="text-gray-500 text-sm dark:text-gray-400"
        for="tags"
      >
        Participants
      </label>
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          multiple=""
          title="multi-select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select...
          </option>
          <option
            class="hidden"
            value="0"
          >
            Jessica
          </option>
          <option
            class="hidden"
            value="9"
          >
            Kali
          </option>
          <option
            class="hidden"
            value="5"
          >
            Henry 
          </option>
          <option
            class="hidden"
            value="6"
          >
            John
          </option>
          <option
            class="hidden"
            value="4"
          >
            June
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-1.5 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content dark:text-dark-tremor-content border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r4:"
            type="button"
          >
            <div
              class="h-6 flex items-center"
            >
              <span>
                Select...
              </span>
            </div>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-2.5"
            >
              <svg
                class="tremor-MultiSelect-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="min-h-20"
    >
      <label
        class="text-gray-500 text-sm dark:text-gray-400"
        for="tags"
      >
        Tool Icon
      </label>
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          multiple=""
          title="multi-select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select...
          </option>
          <option
            class="hidden"
            value="0"
          >
            SlackBot
          </option>
          <option
            class="hidden"
            value="1"
          >
            Spotify
          </option>
          <option
            class="hidden"
            value="2"
          >
            Yahoo
          </option>
          <option
            class="hidden"
            value="3"
          >
            Zalo
          </option>
          <option
            class="hidden"
            value="4"
          >
            Twitter
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-1.5 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content dark:text-dark-tremor-content border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r5:"
            type="button"
          >
            <div
              class="h-6 flex items-center"
            >
              <span>
                Select...
              </span>
            </div>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-2.5"
            >
              <svg
                class="tremor-MultiSelect-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 gap-3"
    >
      <label
        class="text-gray-500 text-sm dark:text-gray-400 after:content-['*'] after:text-red-500 after:text-md"
        for="tags"
      >
        Due date
      </label>
      <div
        class="relative w-full min-w-[10rem] text-tremor-default focus:ring-2 focus:ring-tremor-brand-muted dark:focus:ring-dark-tremor-brand-muted [&>button]:!pl-2 py-4"
        data-headlessui-state=""
      >
        <button
          aria-expanded="false"
          class="w-full outline-none text-left whitespace-nowrap truncate focus:ring-2 transition duration-100 rounded-tremor-default flex flex-nowrap border pl-3 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pr-8 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
          data-headlessui-state=""
          id="headlessui-popover-button-:r6:"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="tremor-DatePicker-calendarIcon flex-none shrink-0 h-5 w-5 mr-2 -ml-0.5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
              fill-rule="evenodd"
            />
          </svg>
          <p
            class="truncate"
          >
            Apr 23, 2024
          </p>
        </button>
        <button
          class="absolute outline-none inset-y-0 right-0 flex items-center transition duration-100 mr-4"
          type="button"
        >
          <svg
            class="flex-none h-4 w-4 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
            />
          </svg>
        </button>
      </div>
      <div
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
    <div
      class="min-h-20 mb-2"
    >
      <p
        class="text-tremor-default text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
      >
        Description
      </p>
      <div
        class="quill mt-3 dark:text-white"
      >
        <div
          class="ql-toolbar ql-snow"
        >
          <span
            class="ql-formats"
          >
            <span
              class="ql-header ql-picker"
            >
              <span
                aria-controls="ql-picker-options-1"
                aria-expanded="false"
                aria-label="picker-label"
                class="ql-picker-label"
                role="button"
                tabindex="0"
              >
                <svg
                  viewBox="0 0 18 18"
                >
                   
                  <polygon
                    class="ql-stroke"
                    points="7 11 9 13 11 11 7 11"
                  />
                   
                  <polygon
                    class="ql-stroke"
                    points="7 7 9 5 11 7 7 7"
                  />
                   
                </svg>
              </span>
              <span
                aria-hidden="true"
                class="ql-picker-options"
                id="ql-picker-options-1"
                tabindex="-1"
              >
                <span
                  class="ql-picker-item"
                  data-value="1"
                  role="button"
                  tabindex="0"
                />
                <span
                  class="ql-picker-item"
                  data-value="2"
                  role="button"
                  tabindex="0"
                />
                <span
                  class="ql-picker-item"
                  data-value="3"
                  role="button"
                  tabindex="0"
                />
                <span
                  class="ql-picker-item ql-selected"
                  role="button"
                  tabindex="0"
                />
              </span>
            </span>
            <select
              class="ql-header"
              style="display: none;"
            >
              <option
                value="1"
              />
              <option
                value="2"
              />
              <option
                value="3"
              />
              <option
                selected="selected"
              />
            </select>
          </span>
          <span
            class="ql-formats"
          >
            <button
              aria-label="ql-bold"
              class="ql-bold"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <path
                  class="ql-stroke"
                  d="M5,4H9.5A2.5,2.5,0,0,1,12,6.5v0A2.5,2.5,0,0,1,9.5,9H5A0,0,0,0,1,5,9V4A0,0,0,0,1,5,4Z"
                />
                 
                <path
                  class="ql-stroke"
                  d="M5,9h5.5A2.5,2.5,0,0,1,13,11.5v0A2.5,2.5,0,0,1,10.5,14H5a0,0,0,0,1,0,0V9A0,0,0,0,1,5,9Z"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-italic"
              class="ql-italic"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="13"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="5"
                  x2="11"
                  y1="14"
                  y2="14"
                />
                 
                <line
                  class="ql-stroke"
                  x1="8"
                  x2="10"
                  y1="14"
                  y2="4"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-underline"
              class="ql-underline"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <path
                  class="ql-stroke"
                  d="M5,3V9a4.012,4.012,0,0,0,4,4H9a4.012,4.012,0,0,0,4-4V3"
                />
                 
                <rect
                  class="ql-fill"
                  height="1"
                  rx="0.5"
                  ry="0.5"
                  width="12"
                  x="3"
                  y="15"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-link"
              class="ql-link"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="11"
                  y1="7"
                  y2="11"
                />
                 
                <path
                  class="ql-even ql-stroke"
                  d="M8.9,4.577a3.476,3.476,0,0,1,.36,4.679A3.476,3.476,0,0,1,4.577,8.9C3.185,7.5,2.035,6.4,4.217,4.217S7.5,3.185,8.9,4.577Z"
                />
                 
                <path
                  class="ql-even ql-stroke"
                  d="M13.423,9.1a3.476,3.476,0,0,0-4.679-.36,3.476,3.476,0,0,0,.36,4.679c1.392,1.392,2.5,2.542,4.679.36S14.815,10.5,13.423,9.1Z"
                />
                 
              </svg>
            </button>
          </span>
          <span
            class="ql-formats"
          >
            <button
              aria-label="ql-list"
              class="ql-list"
              style="margin: 5px;"
              type="button"
              value="ordered"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="15"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="15"
                  y1="9"
                  y2="9"
                />
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="15"
                  y1="14"
                  y2="14"
                />
                 
                <line
                  class="ql-stroke ql-thin"
                  x1="2.5"
                  x2="4.5"
                  y1="5.5"
                  y2="5.5"
                />
                 
                <path
                  class="ql-fill"
                  d="M3.5,6A0.5,0.5,0,0,1,3,5.5V3.085l-0.276.138A0.5,0.5,0,0,1,2.053,3c-0.124-.247-0.023-0.324.224-0.447l1-.5A0.5,0.5,0,0,1,4,2.5v3A0.5,0.5,0,0,1,3.5,6Z"
                />
                 
                <path
                  class="ql-stroke ql-thin"
                  d="M4.5,10.5h-2c0-.234,1.85-1.076,1.85-2.234A0.959,0.959,0,0,0,2.5,8.156"
                />
                 
                <path
                  class="ql-stroke ql-thin"
                  d="M2.5,14.846a0.959,0.959,0,0,0,1.85-.109A0.7,0.7,0,0,0,3.75,14a0.688,0.688,0,0,0,.6-0.736,0.959,0.959,0,0,0-1.85-.109"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-list"
              class="ql-list"
              style="margin: 5px;"
              type="button"
              value="bullet"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="15"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="15"
                  y1="9"
                  y2="9"
                />
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="15"
                  y1="14"
                  y2="14"
                />
                 
                <line
                  class="ql-stroke"
                  x1="3"
                  x2="3"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="3"
                  x2="3"
                  y1="9"
                  y2="9"
                />
                 
                <line
                  class="ql-stroke"
                  x1="3"
                  x2="3"
                  y1="14"
                  y2="14"
                />
                 
              </svg>
            </button>
          </span>
          <span
            class="ql-formats"
          >
            <button
              aria-label="ql-clean"
              class="ql-clean"
              style="margin: 5px;"
              type="button"
            >
              <svg
                class=""
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="5"
                  x2="13"
                  y1="3"
                  y2="3"
                />
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="9.35"
                  y1="12"
                  y2="3"
                />
                 
                <line
                  class="ql-stroke"
                  x1="11"
                  x2="15"
                  y1="11"
                  y2="15"
                />
                 
                <line
                  class="ql-stroke"
                  x1="15"
                  x2="11"
                  y1="11"
                  y2="15"
                />
                 
                <rect
                  class="ql-fill"
                  height="1"
                  rx="0.5"
                  ry="0.5"
                  width="7"
                  x="2"
                  y="14"
                />
                 
              </svg>
            </button>
          </span>
        </div>
        <div
          class="ql-container ql-snow"
        >
          <div
            class="ql-editor ql-blank"
            contenteditable="true"
            data-gramm="false"
            data-placeholder="Some initial bold text"
          >
            <p>
              <br />
            </p>
          </div>
          <div
            class="ql-clipboard"
            contenteditable="true"
            tabindex="-1"
          />
          <div
            class="ql-tooltip ql-hidden"
          >
            <a
              class="ql-preview"
              href="about:blank"
              rel="noopener noreferrer"
              target="_blank"
            />
            <input
              data-formula="e=mc^2"
              data-link="https://quilljs.com"
              data-video="Embed URL"
              type="text"
            />
            <a
              class="ql-action"
              href="#"
            />
            <a
              class="ql-remove"
              href="#"
            />
          </div>
        </div>
      </div>
      <p
        class="text-tremor-default pt-1 text-xs text-red-500 dark:text-red-500"
      />
    </div>
  </div>
</div>
`;

exports[`Testing ProjectFields component Should show error messages for invalid name 2`] = `
<div>
  <div
    class="flex flex-col"
  >
    <div
      class="min-h-20"
    >
      <div
        class="w-full"
      >
        <label
          class="text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
          for=""
        >
          Name
        </label>
        <div
          class="tremor-Flex-root flex w-full flex-row justify-between items-center relative"
        >
          <div
            class="w-full"
          >
            <input
              class="block py-1 px-0 w-full text-sm text-primary bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-gray-500 focus:outline-none focus:ring-0 focus:border-gray-600 peer "
              data-testid="nameProject"
              id=""
              name="name"
              value="344"
            />
            <p
              class="text-tremor-default pt-1 text-xs text-red-500 dark:text-red-500"
            >
              This field must have more than 4 characters.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="min-h-20"
    >
      <label
        class="text-gray-500 text-sm dark:text-gray-400"
        for="tags"
      >
        Participants
      </label>
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          multiple=""
          title="multi-select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select...
          </option>
          <option
            class="hidden"
            value="0"
          >
            Jessica
          </option>
          <option
            class="hidden"
            value="9"
          >
            Kali
          </option>
          <option
            class="hidden"
            value="5"
          >
            Henry 
          </option>
          <option
            class="hidden"
            value="6"
          >
            John
          </option>
          <option
            class="hidden"
            value="4"
          >
            June
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-1.5 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content dark:text-dark-tremor-content border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r8:"
            type="button"
          >
            <div
              class="h-6 flex items-center"
            >
              <span>
                Select...
              </span>
            </div>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-2.5"
            >
              <svg
                class="tremor-MultiSelect-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="min-h-20"
    >
      <label
        class="text-gray-500 text-sm dark:text-gray-400"
        for="tags"
      >
        Tool Icon
      </label>
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          multiple=""
          title="multi-select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select...
          </option>
          <option
            class="hidden"
            value="0"
          >
            SlackBot
          </option>
          <option
            class="hidden"
            value="1"
          >
            Spotify
          </option>
          <option
            class="hidden"
            value="2"
          >
            Yahoo
          </option>
          <option
            class="hidden"
            value="3"
          >
            Zalo
          </option>
          <option
            class="hidden"
            value="4"
          >
            Twitter
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-1.5 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content dark:text-dark-tremor-content border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r9:"
            type="button"
          >
            <div
              class="h-6 flex items-center"
            >
              <span>
                Select...
              </span>
            </div>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-2.5"
            >
              <svg
                class="tremor-MultiSelect-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="min-h-20 gap-3"
    >
      <label
        class="text-gray-500 text-sm dark:text-gray-400 after:content-['*'] after:text-red-500 after:text-md"
        for="tags"
      >
        Due date
      </label>
      <div
        class="relative w-full min-w-[10rem] text-tremor-default focus:ring-2 focus:ring-tremor-brand-muted dark:focus:ring-dark-tremor-brand-muted [&>button]:!pl-2 py-4"
        data-headlessui-state=""
      >
        <button
          aria-expanded="false"
          class="w-full outline-none text-left whitespace-nowrap truncate focus:ring-2 transition duration-100 rounded-tremor-default flex flex-nowrap border pl-3 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pr-8 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
          data-headlessui-state=""
          id="headlessui-popover-button-:ra:"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="tremor-DatePicker-calendarIcon flex-none shrink-0 h-5 w-5 mr-2 -ml-0.5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
              fill-rule="evenodd"
            />
          </svg>
          <p
            class="truncate"
          >
            Apr 23, 2024
          </p>
        </button>
        <button
          class="absolute outline-none inset-y-0 right-0 flex items-center transition duration-100 mr-4"
          type="button"
        >
          <svg
            class="flex-none h-4 w-4 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
            />
          </svg>
        </button>
      </div>
      <div
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      />
    </div>
    <div
      class="min-h-20 mb-2"
    >
      <p
        class="text-tremor-default text-grey text-sm dark:text-lighter after:content-['*'] after:text-red-500 after:text-md"
      >
        Description
      </p>
      <div
        class="quill mt-3 dark:text-white"
      >
        <div
          class="ql-toolbar ql-snow"
        >
          <span
            class="ql-formats"
          >
            <span
              class="ql-header ql-picker"
            >
              <span
                aria-controls="ql-picker-options-2"
                aria-expanded="false"
                aria-label="picker-label"
                class="ql-picker-label"
                role="button"
                tabindex="0"
              >
                <svg
                  viewBox="0 0 18 18"
                >
                   
                  <polygon
                    class="ql-stroke"
                    points="7 11 9 13 11 11 7 11"
                  />
                   
                  <polygon
                    class="ql-stroke"
                    points="7 7 9 5 11 7 7 7"
                  />
                   
                </svg>
              </span>
              <span
                aria-hidden="true"
                class="ql-picker-options"
                id="ql-picker-options-2"
                tabindex="-1"
              >
                <span
                  class="ql-picker-item"
                  data-value="1"
                  role="button"
                  tabindex="0"
                />
                <span
                  class="ql-picker-item"
                  data-value="2"
                  role="button"
                  tabindex="0"
                />
                <span
                  class="ql-picker-item"
                  data-value="3"
                  role="button"
                  tabindex="0"
                />
                <span
                  class="ql-picker-item ql-selected"
                  role="button"
                  tabindex="0"
                />
              </span>
            </span>
            <select
              class="ql-header"
              style="display: none;"
            >
              <option
                value="1"
              />
              <option
                value="2"
              />
              <option
                value="3"
              />
              <option
                selected="selected"
              />
            </select>
          </span>
          <span
            class="ql-formats"
          >
            <button
              aria-label="ql-bold"
              class="ql-bold"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <path
                  class="ql-stroke"
                  d="M5,4H9.5A2.5,2.5,0,0,1,12,6.5v0A2.5,2.5,0,0,1,9.5,9H5A0,0,0,0,1,5,9V4A0,0,0,0,1,5,4Z"
                />
                 
                <path
                  class="ql-stroke"
                  d="M5,9h5.5A2.5,2.5,0,0,1,13,11.5v0A2.5,2.5,0,0,1,10.5,14H5a0,0,0,0,1,0,0V9A0,0,0,0,1,5,9Z"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-italic"
              class="ql-italic"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="13"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="5"
                  x2="11"
                  y1="14"
                  y2="14"
                />
                 
                <line
                  class="ql-stroke"
                  x1="8"
                  x2="10"
                  y1="14"
                  y2="4"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-underline"
              class="ql-underline"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <path
                  class="ql-stroke"
                  d="M5,3V9a4.012,4.012,0,0,0,4,4H9a4.012,4.012,0,0,0,4-4V3"
                />
                 
                <rect
                  class="ql-fill"
                  height="1"
                  rx="0.5"
                  ry="0.5"
                  width="12"
                  x="3"
                  y="15"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-link"
              class="ql-link"
              style="margin: 5px;"
              type="button"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="11"
                  y1="7"
                  y2="11"
                />
                 
                <path
                  class="ql-even ql-stroke"
                  d="M8.9,4.577a3.476,3.476,0,0,1,.36,4.679A3.476,3.476,0,0,1,4.577,8.9C3.185,7.5,2.035,6.4,4.217,4.217S7.5,3.185,8.9,4.577Z"
                />
                 
                <path
                  class="ql-even ql-stroke"
                  d="M13.423,9.1a3.476,3.476,0,0,0-4.679-.36,3.476,3.476,0,0,0,.36,4.679c1.392,1.392,2.5,2.542,4.679.36S14.815,10.5,13.423,9.1Z"
                />
                 
              </svg>
            </button>
          </span>
          <span
            class="ql-formats"
          >
            <button
              aria-label="ql-list"
              class="ql-list"
              style="margin: 5px;"
              type="button"
              value="ordered"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="15"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="15"
                  y1="9"
                  y2="9"
                />
                 
                <line
                  class="ql-stroke"
                  x1="7"
                  x2="15"
                  y1="14"
                  y2="14"
                />
                 
                <line
                  class="ql-stroke ql-thin"
                  x1="2.5"
                  x2="4.5"
                  y1="5.5"
                  y2="5.5"
                />
                 
                <path
                  class="ql-fill"
                  d="M3.5,6A0.5,0.5,0,0,1,3,5.5V3.085l-0.276.138A0.5,0.5,0,0,1,2.053,3c-0.124-.247-0.023-0.324.224-0.447l1-.5A0.5,0.5,0,0,1,4,2.5v3A0.5,0.5,0,0,1,3.5,6Z"
                />
                 
                <path
                  class="ql-stroke ql-thin"
                  d="M4.5,10.5h-2c0-.234,1.85-1.076,1.85-2.234A0.959,0.959,0,0,0,2.5,8.156"
                />
                 
                <path
                  class="ql-stroke ql-thin"
                  d="M2.5,14.846a0.959,0.959,0,0,0,1.85-.109A0.7,0.7,0,0,0,3.75,14a0.688,0.688,0,0,0,.6-0.736,0.959,0.959,0,0,0-1.85-.109"
                />
                 
              </svg>
            </button>
            <button
              aria-label="ql-list"
              class="ql-list"
              style="margin: 5px;"
              type="button"
              value="bullet"
            >
              <svg
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="15"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="15"
                  y1="9"
                  y2="9"
                />
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="15"
                  y1="14"
                  y2="14"
                />
                 
                <line
                  class="ql-stroke"
                  x1="3"
                  x2="3"
                  y1="4"
                  y2="4"
                />
                 
                <line
                  class="ql-stroke"
                  x1="3"
                  x2="3"
                  y1="9"
                  y2="9"
                />
                 
                <line
                  class="ql-stroke"
                  x1="3"
                  x2="3"
                  y1="14"
                  y2="14"
                />
                 
              </svg>
            </button>
          </span>
          <span
            class="ql-formats"
          >
            <button
              aria-label="ql-clean"
              class="ql-clean"
              style="margin: 5px;"
              type="button"
            >
              <svg
                class=""
                viewBox="0 0 18 18"
              >
                 
                <line
                  class="ql-stroke"
                  x1="5"
                  x2="13"
                  y1="3"
                  y2="3"
                />
                 
                <line
                  class="ql-stroke"
                  x1="6"
                  x2="9.35"
                  y1="12"
                  y2="3"
                />
                 
                <line
                  class="ql-stroke"
                  x1="11"
                  x2="15"
                  y1="11"
                  y2="15"
                />
                 
                <line
                  class="ql-stroke"
                  x1="15"
                  x2="11"
                  y1="11"
                  y2="15"
                />
                 
                <rect
                  class="ql-fill"
                  height="1"
                  rx="0.5"
                  ry="0.5"
                  width="7"
                  x="2"
                  y="14"
                />
                 
              </svg>
            </button>
          </span>
        </div>
        <div
          class="ql-container ql-snow"
        >
          <div
            class="ql-editor ql-blank"
            contenteditable="true"
            data-gramm="false"
            data-placeholder="Some initial bold text"
          >
            <p>
              <br />
            </p>
          </div>
          <div
            class="ql-clipboard"
            contenteditable="true"
            tabindex="-1"
          />
          <div
            class="ql-tooltip ql-hidden"
          >
            <a
              class="ql-preview"
              href="about:blank"
              rel="noopener noreferrer"
              target="_blank"
            />
            <input
              data-formula="e=mc^2"
              data-link="https://quilljs.com"
              data-video="Embed URL"
              type="text"
            />
            <a
              class="ql-action"
              href="#"
            />
            <a
              class="ql-remove"
              href="#"
            />
          </div>
        </div>
      </div>
      <p
        class="text-tremor-default pt-1 text-xs text-red-500 dark:text-red-500"
      />
    </div>
  </div>
</div>
`;
